--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -22,11 +22,32 @@
         padding: 40px 80px;
     }
     .links_section {
-        padding-top: 7px;
+        position: relative;
+        padding: 7px 0;
     }
     .description_block {
         width: 75.5%;
         padding: 25px 35px;
+        position: relative;
+        .more {
+            border: 1px solid #e5e5e5;
+            color: #818181;
+            display: none;
+            border-radius: 4px;
+            transition: .3s;
+            width: 100px;
+            margin-top: 0;
+            text-align: center;
+            padding: 6px 0;
+            position: absolute;
+            z-index: 2;
+            right: 0px;
+            top: 0;
+            span {
+                transition: .3s;
+                color: #818181;
+            }
+        }
         p {
             color: #1e0602;
             font-size: 14px;
@@ -152,6 +173,7 @@
             display: block;
             width: 100%;
             z-index: 1;
+            object-fit: cover;
         }
     }
 }
@@ -191,12 +213,13 @@
     .categories_nav {
         height: 40px;
         margin-bottom: 10px;
-        position: relative;
-        transition: top .3s;
+        top: -40px;
+        transition: transform .3s;
+        transform: translateY(0px);
     }
     .fixed {
         position: fixed;
-        top: 0px;
+        transform: translateY(40px);
         width: 100%;
         padding: 0 15px;
         left: 0;
@@ -220,6 +243,9 @@
             align-items: center;
         }
     }
+    .hidden {
+        transform: translateY(0px);
+    }
     ul.categories_list {
         display: flex;
         justify-content: center;
@@ -237,7 +263,7 @@
            width: 13px;
            border: none;
            font-size: 0;
-           transition: opacity .3s, height .3s;
+           transition: opacity .3s;
            position: relative;
            cursor: pointer;
            &:after {
@@ -273,6 +299,7 @@
             border-radius: 4px;
             margin: 0 3px 4px 3px;
             position: relative;
+            height: auto;
             transition: .3s;
             &:before {
                 content: "";
@@ -490,6 +517,72 @@
         }
     }
 }
+.text_content {
+    overflow: hidden;
+}
+
+.show_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 10px 40px;
+    i {
+          color: #ccc;
+          font-size: 16px;
+          line-height: 10px;
+          display: inline-block;
+          margin-left: 4px;
+     }
+     border: 1px solid #e5e5e5;
+     color: #818181;
+     border-radius: 4px;
+     transition: .3s;
+     span {
+        font: 14px/1.3 "PT Sans", sans-serif;
+        font-size: 13px;
+     }
+}
+.open {
+    i {
+        transform: rotate(180deg);
+    }
+}
+
+.somuch_text {
+    .text_content {
+        height: 140px;
+        position: relative;
+        margin-bottom: 10px;
+        &:after {
+            content: '';
+            height: 43px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
+        }
+    }
+    .more {
+        display: block !important;
+    }
+}
+.open {
+    &:after {
+        height: 0px !important;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .brand_heading .description_block .more:hover {
+        span {
+            color: #1d1d1d;
+        }
+        border-color: #999999;
+    }
+}
 
 @media screen and (max-width: 1025px) {
     .all_collections .all_collections_content li,
@@ -505,10 +598,29 @@
     .top_cards .slider-item-container:last-child {
          display: none;
     }
+    .brand_slider_block .slide {
+        height: 550px;
+    }
 }
 
 
 @media screen and (max-width: 768px) {
+    .brand_slider_block .slide img {
+        height: 100%;
+        //width: auto;
+    }
+    .title img {
+        display: none;
+    }
+    .brand_slider_block .description {
+        max-width: 80%;
+    }
+    .brand_slider_block .description .title {
+        font-size: 60px;
+    }
+    .brand_slider_block .description .txt {
+        font-size: 18px;
+    }
     .brand_heading .logo_block {
         width: 30%;
     }
@@ -518,6 +630,19 @@
     .all_collections .all_collections_content li,
     .collection_categories_list .all_collections_content li{
         width: 25%;
+    }
+    .brand_slider_block .slide {
+        height: 450px;
+    }
+    .brand_slider_block .description .title {
+      padding-bottom: 20px;
+      margin-bottom: 35px;
+    }
+    .brand_heading .container {
+        display: none;
+    }
+    .show_info {
+        display: flex;
     }
 }
 
@@ -529,6 +654,18 @@
 }
 
 @media screen and (max-width: 578px) {
+    .brand_collections_page {
+        padding: 20px 0;
+    }
+    .brand_slider_block .slide {
+        height: 240px;
+    }
+    .brand_slider_block .slick-dots {
+        bottom: 10px;
+    }
+    .brand_slider_block .description {
+        display: none;
+    }
     .popular_brand_collections .arrow_left,
     .popular_brand_collections .arrow_right,
     .all_collections_link {
