--- a/Shop/brand-page/app/css/brand.css
+++ b/Shop/brand-page/app/css/brand.css
@@ -13,12 +13,37 @@
   .brand_heading .logo_block img {
     width: 100%; }
 
-.brand_heading .links_section {
-  padding-top: 7px; }
-
 .brand_heading .description_block {
   width: 75.5%;
-  padding: 25px 35px; }
+  padding: 25px 35px;
+  position: relative; }
+  .brand_heading .description_block .more {
+    border: 1px solid #e5e5e5;
+    color: #818181;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    width: 100px;
+    display: none;
+    margin-top: 0;
+    text-align: center;
+    padding: 6px 0;
+    position: absolute;
+    z-index: 2;
+    right: 0;
+    top: 0; }
+    .brand_heading .description_block .more span {
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      color: #818181; }
+  .brand_heading .description_block .links_section {
+    position: relative;
+    padding: 7px 0; }
+  .brand_heading .description_block a {
+    display: inline-block; }
   .brand_heading .description_block p {
     color: #1e0602;
     font-size: 14px;
@@ -43,17 +68,23 @@
       content: "";
       position: absolute;
       left: 0;
+      bottom: 0;
       display: inline-block;
       width: 20px;
       height: 19px;
       background: url(../images/video.png); }
   .brand_heading .description_block .rev {
-    padding-left: 19px; }
+    padding-left: 19px;
+    margin-right: 0; }
     .brand_heading .description_block .rev:before {
       width: 14px;
       top: 1px;
       height: 16px;
       background: url(../images/re.png); }
+
+.brand_heading .text_content {
+  overflow: hidden;
+  margin-bottom: 15px; }
 
 .all_collections_link {
   display: none;
@@ -81,6 +112,9 @@
       color: #d5d5d5;
       font-family: 'Ico Moon' !important;
       font-size: 26px;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
       speak: none;
       font-style: normal;
       font-weight: normal;
@@ -373,10 +407,34 @@
     color: #bfbfbf;
     margin-left: 0.2em; }
 
+.somuch_text .text_content {
+  height: 140px;
+  position: relative; }
+  .somuch_text .text_content:after {
+    content: '';
+    height: 43px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.01)), color-stop(21%, rgba(255, 255, 255, 0.17)), color-stop(79%, rgba(255, 255, 255, 0.83)), to(rgba(255, 255, 255, 0.99)));
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
+    background: -o-linear-gradient(top, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%); }
+
+.somuch_text .more {
+  display: block !important; }
+
+.open:after {
+  height: 0px !important; }
+
 @media screen and (min-width: 1025px) {
   .brand_heading .description_block .video:hover span,
   .brand_heading .description_block .rev:hover span {
     color: #197ac4; }
+  .brand_heading .description_block .more:hover {
+    border-color: #999999; }
+    .brand_heading .description_block .more:hover span {
+      color: #1d1d1d; }
   .brand_categories .brand_categories_content li a:hover,
   .all_collections .all_collections_content li a:hover {
     color: #197ac4; }
@@ -405,6 +463,14 @@
   .brand_categories .brand_categories_content .droppable_preview {
     display: none; } }
 
+@media screen and (max-width: 640px) {
+  .brand_heading .description_block .more {
+    position: relative;
+    display: block;
+    margin-bottom: 15px; }
+  .brand_heading .description_block .links_section {
+    padding: 0; } }
+
 @media screen and (max-width: 768px) {
   .brand_heading .logo_block {
     width: 30%; }
@@ -428,8 +494,55 @@
     display: block; }
   .brand_heading .description_block {
     padding: 20px; }
-  .all_collections {
+  .all_collections .all_collections_content {
+    padding: 0;
+    border-bottom: none; }
+  .all_collections .all_collections_content li {
     display: none; }
+  .all_collections .all_collections_content li:nth-child(1),
+  .all_collections .all_collections_content li:nth-child(2),
+  .all_collections .all_collections_content li:nth-child(3),
+  .all_collections .all_collections_content li:nth-child(4),
+  .all_collections .all_collections_content li:nth-child(5),
+  .all_collections .all_collections_content li:nth-child(6),
+  .all_collections .all_collections_content li:nth-child(7),
+  .all_collections .all_collections_content li:nth-child(8),
+  .all_collections .all_collections_content li:nth-child(9),
+  .all_collections .all_collections_content li:nth-child(10) {
+    display: block;
+    width: 100%;
+    margin: 0;
+    border-bottom: 1px solid #e5e5e5; }
+  .all_collections .all_collections_content li a {
+    position: relative;
+    display: block;
+    color: #585858;
+    padding: 13px 20px;
+    text-align: left; }
+  .all_collections .all_collections_content li a:after {
+    right: 20px;
+    color: #d5d5d5;
+    font-family: 'Ico Moon' !important;
+    font-size: 26px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\e921";
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .all_collections .all_collections_content ul {
+    margin: 0; }
   .popular_brand_collections .popular_collections_content {
     margin: 0;
     border: 1px solid #e5e5e5;
