--- a/Shop/brand-page/app/scss/brand.scss
+++ b/Shop/brand-page/app/scss/brand.scss
@@ -12,12 +12,36 @@
         }
         padding: 70px 60px;
     }
-    .links_section {
-        padding-top: 7px;
-    }
     .description_block {
         width: 75.5%;
         padding: 25px 35px;
+        position: relative;
+        .more {
+            border: 1px solid #e5e5e5;
+            color: #818181;
+            border-radius: 4px;
+            transition: .3s;
+            width: 100px;
+            display: none;
+            margin-top: 0;
+            text-align: center;
+            padding: 6px 0;
+            position: absolute;
+            z-index: 2;
+            right: 0;
+            top: 0;
+            span {
+                transition: .3s;
+                color: #818181;
+            }
+        }
+        .links_section {
+              position: relative;
+              padding: 7px 0;
+        }
+        a {
+            display: inline-block;
+        }
         p {
             color: #1e0602;
             font-size: 14px;
@@ -41,6 +65,7 @@
                 content: "";
                 position: absolute;
                 left: 0;
+                bottom: 0;
                 display: inline-block;
                 width: 20px;
                 height: 19px;
@@ -49,6 +74,7 @@
         }
         .rev {
             padding-left: 19px;
+            margin-right: 0;
             &:before {
                 width: 14px;
                 top: 1px;
@@ -56,6 +82,10 @@
                 background: url(../images/re.png);
             }
         }
+    }
+    .text_content {
+        overflow: hidden;
+        margin-bottom: 15px;
     }
 }
 
@@ -70,23 +100,24 @@
         padding: 10px 20px;
         position: relative;
         span {
-        	position: relative;
-        	padding-right: 18px;
+            position: relative;
+            padding-right: 18px;
         }
         span:before {
-        	content: "";
-        	position: absolute;
-        	width: 12px;
-        	height: 12px;
-        	right: 0;
-        	top: 3px;
-        	background: url(../images/link_icon.png);
+            content: "";
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            right: 0;
+            top: 3px;
+            background: url(../images/link_icon.png);
         }
         &:after {
             right: 20px;
             color: #d5d5d5;
             font-family: 'Ico Moon' !important;
             font-size: 26px;
+            transition: .3s;
             speak: none;
             font-style: normal;
             font-weight: normal;
@@ -384,7 +415,28 @@
     }
 }
 
-
+.somuch_text {
+    .text_content {
+        height: 140px;
+        position: relative;
+        &:after {
+            content: '';
+            height: 43px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
+        }
+    }
+    .more {
+        display: block !important;
+    }
+}
+.open {
+    &:after {
+        height: 0px !important;
+    }
+}
 
 @media screen and (min-width: 1025px) {
     .brand_heading .description_block .video:hover,
@@ -392,6 +444,13 @@
         span {
             color: #197ac4;
         }
+    }
+
+    .brand_heading .description_block .more:hover {
+        span {
+            color: #1d1d1d;
+        }
+        border-color: #999999;
     }
     .brand_categories .brand_categories_content li a:hover,
     .all_collections .all_collections_content li a:hover {
@@ -430,7 +489,16 @@
     }
 }
 
-
+@media screen and (max-width: 640px) {
+     .brand_heading .description_block .more {
+        position: relative;
+        display: block;
+        margin-bottom: 15px;
+     }
+     .brand_heading .description_block .links_section {
+        padding: 0;
+     }
+}
 @media screen and (max-width: 768px) {
     .brand_heading .logo_block {
         width: 30%;
@@ -452,19 +520,74 @@
 }
 
 @media screen and (max-width: 578px) {
-	.brand_categories {
-		display: none;
-	}
+    .brand_categories {
+        display: none;
+    }
     .popular_brand_collections .arrow_left,
     .popular_brand_collections .arrow_right,
     .all_collections_link {
         display: block;
     }
     .brand_heading .description_block {
-    	 padding: 20px;
+        padding: 20px;
     }
     .all_collections {
+        //display: none;
+    }
+    .all_collections .all_collections_content {
+        padding: 0;
+        border-bottom: none;
+    }
+    .all_collections .all_collections_content li {
         display: none;
+    }
+    .all_collections .all_collections_content li:nth-child(1),
+    .all_collections .all_collections_content li:nth-child(2),
+    .all_collections .all_collections_content li:nth-child(3),
+    .all_collections .all_collections_content li:nth-child(4),
+    .all_collections .all_collections_content li:nth-child(5),
+    .all_collections .all_collections_content li:nth-child(6),
+    .all_collections .all_collections_content li:nth-child(7),
+    .all_collections .all_collections_content li:nth-child(8),
+    .all_collections .all_collections_content li:nth-child(9),
+    .all_collections .all_collections_content li:nth-child(10) {
+        display: block;
+        width: 100%;
+        margin: 0;
+        border-bottom: 1px solid #e5e5e5;
+    }
+    .all_collections .all_collections_content li a {
+        position: relative;
+        display: block;
+        color: #585858;
+        padding: 13px 20px;
+        text-align: left;
+    }
+    .all_collections .all_collections_content li a:after {
+        right: 20px;
+        color: #d5d5d5;
+        font-family: 'Ico Moon' !important;
+        font-size: 26px;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+        speak: none;
+        font-style: normal;
+        font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        content: "\e921";
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+    .all_collections .all_collections_content ul {
+        margin: 0;
     }
     .popular_brand_collections .popular_collections_content {
         margin: 0;
@@ -486,9 +609,9 @@
         display: block;
     }
     .brand_heading .logo_block {
-    	 border-right: none;
-    	 border-bottom: 1px solid #e5e5e5;
-    	 padding: 40px;
+        border-right: none;
+        border-bottom: 1px solid #e5e5e5;
+        padding: 40px;
     }
     .brand_heading .logo_block,
     .brand_heading .description_block {
