--- a/Shop/brand-collections-page/app/scss/all.scss
+++ b/Shop/brand-collections-page/app/scss/all.scss
@@ -2311,7 +2311,8 @@ i {
 
 @media screen and (min-width: 1025px) {
 	.slider-item:hover {
-		box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2);
+		box-shadow: none;
+		box-shadow: 7px 12px 17px -8px rgba(0, 0, 0, 0.2);
 	}
 	.slider-item:hover .item-price {
 		background: #1e0602;
