--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -126,7 +126,7 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        z-index: 2;
+        z-index: 3;
         width: 100%;
         max-width: 50%;
         .title {
@@ -164,8 +164,11 @@
         background-color: rgba(0, 0, 0, 0.5);
     }
     .slide {
-        height: 600px;
         position: relative;
+        .img_brand {
+            position: relative;
+            height: 600px;
+        }
         img {
             position: absolute;
             top: 50%;
@@ -182,14 +185,14 @@
     margin-top: 50px;
     .slider-item {
         background-color: #fff;
+    }
+    .slider-item a.img {
+        position: relative;
         &:before {
             content: "";
             display: block;
             padding-top: 100%;
         }
-    }
-    .slider-item a {
-        position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
@@ -226,7 +229,8 @@
         background-color: rgba(255, 255, 255, 0.9);
         z-index: 101;
         box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
-        .slick-prev, .slick-next {
+        .slick-prev,
+        .slick-next {
             height: 40px !important;
             padding: 0 15px !important;
         }
@@ -256,33 +260,34 @@
         width: auto;
         margin: 0;
         padding: 0;
-        .slick-prev, .slick-next {
-           content: '/';
-           height: 24px;
-           padding: 0 15px;
-           width: 13px;
-           border: none;
-           font-size: 0;
-           transition: opacity .3s;
-           position: relative;
-           cursor: pointer;
-           &:after {
-            content: '';
-            position: absolute;
-            height: 21px;
-            width: 11px;
-            background: url(../images/arrow_brands.png) no-repeat center center;
-            background-size: contain;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 0.5;
-           }
+        .slick-prev,
+        .slick-next {
+            content: '/';
+            height: 24px;
+            padding: 0 15px;
+            width: 13px;
+            border: none;
+            font-size: 0;
+            transition: opacity .3s;
+            position: relative;
+            cursor: pointer;
+            &:after {
+                content: '';
+                position: absolute;
+                height: 21px;
+                width: 11px;
+                background: url(../images/arrow_brands.png) no-repeat center center;
+                background-size: contain;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                opacity: 0.5;
+            }
         }
         .slick-prev {
             transform: rotate(180deg);
         }
-        a { 
+        a {
             display: flex;
             align-items: center;
             position: relative;
@@ -316,26 +321,34 @@
             }
         }
         .active_nav_link {
-             background-color: #000;
-             a {
+            background-color: #000;
+            a {
                 color: #fff;
                 span {
-                border-color: transparent;
+                    border-color: transparent;
+                }
             }
-             }
-             &:before {
+            &:before {
                 border-top-color: #000;
-             }
+            }
         }
     }
     .init {
         position: relative !important;
     }
     .content_categories {
+        position: relative;
+        .slider-item-container {
+            position: relative;
+        }
+        .slick-list {
+            margin: 0 -10px;
+        }
     }
     .button_more {
         font-size: 100%;
         margin-top: 20px;
+        padding: 11px 24px;
     }
     .dropdown_list {
         .slider-item-container {
@@ -418,7 +431,8 @@
     }
 }
 
-.all_collections, .collection_categories_list {
+.all_collections,
+.collection_categories_list {
     .content_title {
         font-size: 18px;
         color: #1e0602;
@@ -456,10 +470,47 @@
     }
 }
 
+.popular_brand_collections .content_title {
+    padding-top: 0;
+}
+
+.tab_content {
+    padding: 0 10px;
+    padding-bottom: 80px;
+    @media screen and (min-width: 1025px) {
+        .slider-item:hover,
+        .slider-item:hover .slider-item-more {
+            box-shadow: 7px 12px 17px -7px rgba(0, 0, 0, 0.2);
+        }
+    }
+    .slick-prev,
+    .slick-next {
+        position: absolute;
+        font-size: 0;
+        height: 23px;
+        width: 13px;
+        z-index: 2;
+        top: 40%;
+        border: none;
+        transform: rotateY(-50%);
+        background: url(../images/arrow_brands.png);
+        background-size: contain;
+    }
+    .slick-prev {
+        left: 0;
+        transform: rotate(180deg);
+    }
+    .slick-next {
+        right: 0;
+    }
+}
+.active_tab {
+    transform: translateX(0%) !important;
+}
 
 @media screen and (min-width: 1025px) {
     .all_collections .all_collections_content li a:hover,
-    .collection_categories_list .all_collections_content li a:hover{
+    .collection_categories_list .all_collections_content li a:hover {
         color: #197ac4;
     }
     .brand_heading .description_block a:hover,
@@ -488,13 +539,13 @@
 
 .category_list:after {
     background: linear-gradient(to bottom, rgba(250, 250, 250, 0.01) 0%, rgba(250, 250, 250, 0.17) 21%, rgba(250, 250, 250, 0.83) 79%, rgba(250, 250, 250, 0.99) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#03ffffff', endColorstr='#fcffffff', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#03ffffff', endColorstr='#fcffffff', GradientType=0);
 }
 
 .with_box {
     margin-top: 20px;
     .box_title {
-        margin-bottom: 5px;
+        margin-bottom: 0;
     }
 }
 
@@ -530,20 +581,20 @@
     margin-top: 20px;
     padding: 10px 40px;
     i {
-          color: #ccc;
-          font-size: 16px;
-          line-height: 10px;
-          display: inline-block;
-          margin-left: 4px;
-     }
-     border: 1px solid #e5e5e5;
-     color: #818181;
-     border-radius: 4px;
-     transition: .3s;
-     span {
+        color: #ccc;
+        font-size: 16px;
+        line-height: 10px;
+        display: inline-block;
+        margin-left: 4px;
+    }
+    border: 1px solid #e5e5e5;
+    color: #818181;
+    border-radius: 4px;
+    transition: .3s;
+    span {
         font: 14px/1.3 "PT Sans", sans-serif;
         font-size: 13px;
-     }
+    }
 }
 .open {
     i {
@@ -586,7 +637,7 @@
 
 @media screen and (max-width: 1025px) {
     .all_collections .all_collections_content li,
-    .collection_categories_list .all_collections_content li{
+    .collection_categories_list .all_collections_content li {
         width: 20%;
     }
     .brand_heading .logo_block {
@@ -595,19 +646,22 @@
 }
 
 @media screen and (max-width: 992px) {
-    .top_cards .slider-item-container:last-child {
-         display: none;
-    }
-    .brand_slider_block .slide {
-        height: 550px;
+    .img_brand {
+        height: 500px !important;
     }
 }
 
 
 @media screen and (max-width: 768px) {
+    .brand_slider_block {
+        margin-bottom: 20px;
+    }
     .brand_slider_block .slide img {
         height: 100%;
         //width: auto;
+    }
+    .brand_categories_block {
+        margin-top: 40px;
     }
     .title img {
         display: none;
@@ -628,15 +682,15 @@
         width: 70%;
     }
     .all_collections .all_collections_content li,
-    .collection_categories_list .all_collections_content li{
+    .collection_categories_list .all_collections_content li {
         width: 25%;
     }
-    .brand_slider_block .slide {
-        height: 450px;
+    .img_brand {
+        height: 450px !important;
     }
     .brand_slider_block .description .title {
-      padding-bottom: 20px;
-      margin-bottom: 35px;
+        padding-bottom: 20px;
+        margin-bottom: 35px;
     }
     .brand_heading .container {
         display: none;
@@ -654,17 +708,89 @@
 }
 
 @media screen and (max-width: 578px) {
+    .show_info span {
+        font-size: 16px;
+    }
+    .tab_content {
+        padding-bottom: 0;
+    }
+    .brand_categories_block {
+        margin-top: 20px;
+    }
+    .slider-item .item-price {
+        background: #1e0602;
+        color: #fff;
+    }
+    .brand_categories_block .slider-item {
+        margin: 0;
+    }
+    .brand_categories_block .slick-dots {
+        margin-top: 10px;
+    }
+    .slider-item .slider-item-more {
+        position: relative;
+        display: block;
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+        border: none;
+    }
+    .brand_categories_content {
+        padding: 20px 10px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+    }
+    .slider-item img {
+        border: none;
+    }
+    .brand_categories_block .content_categories .slick-list {
+        margin: 0;
+    }
+    .brand_categories_block .button_more {
+        display: none;
+    }
+    .brand_slider_block .slick-dots button {
+        width: 9px;
+        height: 9px;
+        background: transparent;
+        border: 1px solid #b3b3b3;
+    }
+    .brand_slider_block .slick-dots li.slick-active button {
+        border-color: #fff;
+    }
+    .brand_slider_block .description .txt {
+        font-size: 14px;
+    }
     .brand_collections_page {
         padding: 20px 0;
     }
-    .brand_slider_block .slide {
-        height: 240px;
+    .img_brand {
+        height: 240px !important;
     }
     .brand_slider_block .slick-dots {
         bottom: 10px;
     }
-    .brand_slider_block .description {
+    .brand_slider_block .description .title {
         display: none;
+    }
+    .brand_slider_block .description {
+        position: relative;
+        top: auto;
+        left: auto;
+        max-width: 100%;
+        transform: translate(0);
+        padding: 25px 0;
+    }
+    .brand_slider_block {
+        background-color: #fff;
+    }
+    .brand_slider_block .slick-dots {
+        bottom: auto;
+        top: 220px;
+    }
+    .brand_slider_block .description .txt {
+        color: #000;
+        text-align: left;
     }
     .popular_brand_collections .arrow_left,
     .popular_brand_collections .arrow_right,
@@ -676,6 +802,12 @@
         border: 1px solid #e5e5e5;
         padding: 20px 30px;
         background-color: #fff;
+    }
+    .popular_brand_collections {
+        margin-top: 20px;
+    }
+    .additional_cards {
+        margin: 0;
     }
     .popular_brand_collections .brand_block_container {
         padding: 0;
@@ -701,8 +833,61 @@
         display: block;
         margin: 0 auto;
     }
-    .all_collections,
     .collection_categories_list {
         display: none;
+    }
+    .all_collections .all_collections_content {
+        border-top: none;
+    }
+    .all_collections .all_collections_content {
+        padding: 0;
+        border-bottom: none;
+    }
+    .all_collections .all_collections_content ul {
+        margin: 0;
+    }
+    .all_collections .all_collections_content li {
+        width: 100%;
+        margin: 0;
+        border-bottom: 1px solid #e5e5e5;
+    }
+    .all_collections .all_collections_content li a {
+        position: relative;
+        display: block;
+        color: #585858;
+        padding: 13px 20px;
+        text-align: left;
+        &:after {
+            right: 20px;
+            color: #d5d5d5;
+            font-family: 'Ico Moon' !important;
+            font-size: 26px;
+            -webkit-transition: .3s;
+            -o-transition: .3s;
+            transition: .3s;
+            speak: none;
+            font-style: normal;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: "\e921";
+            position: absolute;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+    }
+    .brand_categories_block ul.categories_list .slick-prev:after,
+    .brand_categories_block ul.categories_list .slick-next:after {
+        height: 23px;
+        width: 13px;
+        opacity: 1;
+    }
+    .slider-item-more p {
+        text-align: center;
     }
 }
