--- a/Shop/brand-page/app/scss/brand.scss
+++ b/Shop/brand-page/app/scss/brand.scss
@@ -1,3 +1,48 @@
+.nano-content {
+    ul {
+        margin: 0;
+        padding: 0;
+    }
+    li {
+        border-bottom: 1px solid #e5e5e5;
+    }
+    a {
+        position: relative;
+        display: block;
+        color: #585858;
+        padding: 13px 20px;
+        text-align: left;
+        &:after {
+            right: 20px;
+            color: #d5d5d5;
+            font-family: 'Ico Moon' !important;
+            font-size: 26px;
+            -webkit-transition: .3s;
+            -o-transition: .3s;
+            transition: .3s;
+            speak: none;
+            font-style: normal;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: "\e921";
+            position: absolute;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+        *:before,
+        *:after {
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+    }
+}
+
 .brand_heading {
     .brand_heading-content {
         border: 1px solid #e5e5e5;
@@ -36,8 +81,8 @@
             }
         }
         .links_section {
-              position: relative;
-              padding: 7px 0;
+            position: relative;
+            padding: 7px 0;
         }
         a {
             display: inline-block;
@@ -97,7 +142,7 @@
     a {
         display: block;
         background-color: #fff;
-        padding: 10px 20px;
+        padding: 13px 20px;
         position: relative;
         span {
             position: relative;
@@ -490,14 +535,14 @@
 }
 
 @media screen and (max-width: 640px) {
-     .brand_heading .description_block .more {
+    .brand_heading .description_block .more {
         position: relative;
         display: block;
         margin-bottom: 15px;
-     }
-     .brand_heading .description_block .links_section {
+    }
+    .brand_heading .description_block .links_section {
         padding: 0;
-     }
+    }
 }
 @media screen and (max-width: 768px) {
     .brand_heading .logo_block {
