--- a/Shop/allbrands-page/app/scss/allbrands.scss
+++ b/Shop/allbrands-page/app/scss/allbrands.scss
@@ -423,6 +423,7 @@ ul {
         border: 1px solid #e5e5e5;
         padding: 20px;
         display: flex;
+        background-color: #fff;
     }
     li {
         margin-bottom: 5px;
