--- a/Shop/brand-page/app/css/brand.css
+++ b/Shop/brand-page/app/css/brand.css
@@ -1,42 +1,45 @@
-.nano-content ul {
-  margin: 0;
-  padding: 0; }
-
-.nano-content li {
-  border-bottom: 1px solid #e5e5e5; }
-
-.nano-content a {
-  position: relative;
-  display: block;
-  color: #585858;
-  padding: 13px 20px;
-  text-align: left; }
-  .nano-content a:after {
-    right: 20px;
-    color: #d5d5d5;
-    font-family: 'Ico Moon' !important;
-    font-size: 26px;
-    -webkit-transition: .3s;
-    -o-transition: .3s;
-    transition: .3s;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    content: "\e921";
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%); }
-  .nano-content a *:before,
-  .nano-content a *:after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; }
+.nano-content {
+  padding: 20px; }
+  .nano-content ul {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    border: 1px solid #e5e5e5;
+    border-bottom: none; }
+  .nano-content li {
+    border-bottom: 1px solid #e5e5e5; }
+  .nano-content a {
+    position: relative;
+    display: block;
+    color: #585858;
+    padding: 13px 20px;
+    text-align: left; }
+    .nano-content a:after {
+      right: 20px;
+      color: #d5d5d5;
+      font-family: 'Ico Moon' !important;
+      font-size: 26px;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      speak: none;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      content: "\e921";
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
+    .nano-content a *:before,
+    .nano-content a *:after {
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box; }
 
 .brand_heading .brand_heading-content {
   border: 1px solid #e5e5e5;
