--- a/Shop/allbrands-page/app/css/allbrands.css
+++ b/Shop/allbrands-page/app/css/allbrands.css
@@ -5,8 +5,27 @@ ul {
   margin: 0; }
 
 .mobile_sort {
-  display: none; }
+  display: none;
+  position: relative; }
+  .mobile_sort:before {
+    content: "";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -4px;
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+    z-index: 2;
+    display: block;
+    width: 10px;
+    height: 8px;
+    opacity: 0.9;
+    background: url(../images/filter_arr.png);
+    -webkit-background-size: contain;
+            background-size: contain; }
   .mobile_sort .mobile_list {
+    position: relative;
     display: block;
     -webkit-box-shadow: inset 0px 1px 1px -1px #d5d5d5;
             box-shadow: inset 0px 1px 1px -1px #d5d5d5;
@@ -14,7 +33,10 @@ ul {
     border: 1px solid #d5d5d5;
     padding: 10px 7px;
     -webkit-border-radius: 4px;
-            border-radius: 4px; }
+            border-radius: 4px;
+    -webkit-appearance: none !important;
+       -moz-appearance: none !important;
+            appearance: none !important; }
     .mobile_sort .mobile_list span {
       display: block; }
     .mobile_sort .mobile_list option {
