--- a/Shop/allbrands-page/app/scss/allbrands.scss
+++ b/Shop/allbrands-page/app/scss/allbrands.scss
@@ -7,6 +7,8 @@ ul {
 .mobile_sort {
     display: none;
     position: relative;
+    background-color: #fff;
+    border-radius: 4px;
     &:before {
             content: "";
             position: absolute;
