--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -7,6 +7,31 @@
     }
 }
 
+.mobile_current_slide {
+    display: none;
+    width: 100%;
+    padding: 13px 10px;
+    color: #000;
+    border: 1px solid #e5e5e5;
+    border-radius: 4px;
+    position: relative;
+    box-shadow: inset 0px 1px 2px -1px #d5d5d5;
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        width: 10px;
+        height: 8px;
+        margin-top: -4px;
+        transform: rotate(180deg);
+        opacity: 0.8;
+        background: url(../images/filter_arr.png) no-repeat;
+        background-size: contain;
+    }
+}
+
 .brand_heading {
     .brand_heading-content {
         border: 1px solid #e5e5e5;
@@ -29,20 +54,29 @@
         width: 75.5%;
         padding: 25px 35px;
         position: relative;
-        .more {
+        .link_outer {
             border: 1px solid #e5e5e5;
             color: #818181;
-            display: none;
             border-radius: 4px;
             transition: .3s;
-            width: 100px;
             margin-top: 0;
             text-align: center;
-            padding: 6px 0;
+            padding: 7px 12px;
             position: absolute;
-            z-index: 2;
-            right: 0px;
+            right: 0;
             top: 0;
+            span {
+                transition: .3s;
+                color: #818181;
+            }
+        }
+        .more {
+            color: #818181;
+            display: none;
+            max-width: 100px;
+            transition: .3s;
+            margin-top: 0;
+            text-align: center;
             span {
                 transition: .3s;
                 color: #818181;
@@ -537,6 +571,8 @@
     }
 }
 
+
+
 .category_list:after {
     background: linear-gradient(to bottom, rgba(250, 250, 250, 0.01) 0%, rgba(250, 250, 250, 0.17) 21%, rgba(250, 250, 250, 0.83) 79%, rgba(250, 250, 250, 0.99) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#03ffffff', endColorstr='#fcffffff', GradientType=0);
@@ -617,7 +653,7 @@
         }
     }
     .more {
-        display: block !important;
+        display: inline-block !important;
     }
 }
 .open {
@@ -708,6 +744,45 @@
 }
 
 @media screen and (max-width: 578px) {
+    .mobile_current_slide {
+        display: block;
+    }
+    .brand_categories_block ul.categories_list a span {
+        border-bottom: none;
+    }
+    .brand_categories_block .categories_nav {
+        height: auto;
+        position: relative;
+        z-index: 2;
+        top: 0;
+        margin: 0 10px;
+    }
+    .brand_categories_block ul.categories_list li {
+        margin: 0;
+        border-bottom: 1px solid #e5e5e5;
+        width: 100%;
+        border-radius: 0;
+        &:last-child {
+            border-bottom: none;
+        }
+    }
+    .brand_categories_block ul.categories_list a {
+        padding: 13px 20px;
+        height: auto;
+    }
+    .brand_categories_block ul.categories_list {
+        display: block;
+        width: 100%;
+        max-height: 300px;
+        overflow-y: scroll;
+        border: 1px solid #e5e5e5;
+        border-top: 0;
+        background-color: #fff;
+        display: none;
+    }
+    .brand_categories_block ul.categories_list li:before {
+       display: none;
+    }
     .show_info span {
         font-size: 16px;
     }
