--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -663,11 +663,16 @@
 }
 
 @media screen and (min-width: 1025px) {
-    .brand_heading .description_block .more:hover {
+    .brand_heading .description_block .link_outer:hover {
         span {
             color: #1d1d1d;
         }
         border-color: #999999;
+    }
+    .brand_heading .description_block .more:hover {
+        span {
+            color: #1d1d1d;
+        }
     }
 }
 
