--- a/Shop/brand-page/app/css/brand.css
+++ b/Shop/brand-page/app/css/brand.css
@@ -41,6 +41,9 @@
       -webkit-box-sizing: border-box;
       box-sizing: border-box; }
 
+.brand_page {
+  padding-bottom: 20px; }
+
 .brand_heading .brand_heading-content {
   border: 1px solid #e5e5e5;
   background-color: #fff;
@@ -61,22 +64,15 @@
   padding: 25px 35px;
   position: relative; }
   .brand_heading .description_block .more {
-    border: 1px solid #e5e5e5;
     color: #818181;
-    -webkit-border-radius: 4px;
-            border-radius: 4px;
+    display: none;
+    max-width: 100px;
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s;
-    width: 100px;
-    display: none;
     margin-top: 0;
     text-align: center;
-    padding: 6px 0;
-    position: absolute;
-    z-index: 2;
-    right: 0;
-    top: 0; }
+    border-bottom: 1px dashed #585858; }
     .brand_heading .description_block .more span {
       -webkit-transition: .3s;
       -o-transition: .3s;
@@ -85,6 +81,10 @@
   .brand_heading .description_block .links_section {
     position: relative;
     padding: 7px 0; }
+  .brand_heading .description_block .links {
+    position: absolute;
+    right: 0;
+    top: 0; }
   .brand_heading .description_block a {
     display: inline-block; }
   .brand_heading .description_block p {
@@ -96,32 +96,39 @@
   .brand_heading .description_block .rev {
     font-size: 13px;
     color: #bfbfbf;
-    padding-left: 25px;
     position: relative;
-    margin-right: 15px; }
+    margin-right: 15px;
+    border: 1px solid #e5e5e5;
+    padding: 7px 12px;
+    padding-left: 35px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
     .brand_heading .description_block .video .video_ico,
     .brand_heading .description_block .video .rev_ico,
     .brand_heading .description_block .rev .video_ico,
     .brand_heading .description_block .rev .rev_ico {
-      border-bottom: 1px dashed #585858;
       margin-right: 0.2em;
       color: #585858; }
     .brand_heading .description_block .video:before,
     .brand_heading .description_block .rev:before {
       content: "";
       position: absolute;
-      left: 0;
-      bottom: 0;
+      left: 12px;
+      bottom: 6px;
       display: inline-block;
       width: 20px;
       height: 19px;
       background: url(../images/video.png); }
   .brand_heading .description_block .rev {
-    padding-left: 19px;
-    margin-right: 0; }
+    margin-right: 0;
+    padding-left: 30px; }
     .brand_heading .description_block .rev:before {
       width: 14px;
-      top: 1px;
+      left: 12px;
+      bottom: 6px;
       height: 16px;
       background: url(../images/re.png); }
 
@@ -465,19 +472,20 @@
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%); }
 
 .somuch_text .more {
-  display: block !important; }
+  display: inline-block !important; }
 
 .open:after {
   height: 0px !important; }
 
 @media screen and (min-width: 1025px) {
-  .brand_heading .description_block .video:hover span,
-  .brand_heading .description_block .rev:hover span {
-    color: #197ac4; }
-  .brand_heading .description_block .more:hover {
+  .brand_heading .description_block .video:hover,
+  .brand_heading .description_block .rev:hover {
     border-color: #999999; }
-    .brand_heading .description_block .more:hover span {
+    .brand_heading .description_block .video:hover span,
+    .brand_heading .description_block .rev:hover span {
       color: #1d1d1d; }
+  .brand_heading .description_block .more:hover span {
+    color: #1d1d1d; }
   .brand_categories .brand_categories_content li a:hover,
   .all_collections .all_collections_content li a:hover {
     color: #197ac4; }
@@ -506,13 +514,18 @@
   .brand_categories .brand_categories_content .droppable_preview {
     display: none; } }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 675px) {
+  .brand_heading .description_block .links {
+    position: relative;
+    margin-bottom: 10px; }
   .brand_heading .description_block .more {
     position: relative;
     display: block;
     margin-bottom: 15px; }
   .brand_heading .description_block .links_section {
-    padding: 0; } }
+    padding: 0; }
+  .brand_heading .description_block a {
+    margin-bottom: 10px; } }
 
 @media screen and (max-width: 768px) {
   .brand_heading .logo_block {
