--- a/Shop/brand-page/app/scss/brand.scss
+++ b/Shop/brand-page/app/scss/brand.scss
@@ -545,7 +545,7 @@
 @media screen and (max-width: 675px) {
      .brand_heading .description_block .links {
         position: relative;
-        margin-bottom: 10px;
+        margin-bottom: -10px;
      }
      .brand_heading .description_block .more {
         position: relative;
@@ -664,6 +664,7 @@
     }
     .brand_page {
         padding-top: 20px;
+        padding-bottom: 0;
     }
     .brand_heading .brand_heading-content {
         display: block;
